static/mlpostech.css
a {
  color: #007a7a;
}
body {
  font-size: 18px;
}

h1,h2,h3,h4,h5,h6 {
  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-weight: 700;
  /* text-transform: uppercase; */
}
footer {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 2.5rem;
  font-size: 14px;
  background-color: white;
}

.normal-text {
  font-weight: normal;
  color: #454545;
}

.sub-text {
  font-weight: normal;
  color: #aaa;
}

.navbar {
  font-family: "Montserrat";
  height: 65px;
  background-color: #E5E5E5;
  border-bottom: 1px solid #ccc;
  margin-bottom: 0;
}
.navbar-home {
  font-family: "Montserrat";
  height: 65px;
  background-color: white;
  border-bottom: 1px solid #ccc;
  margin-bottom: 0;
}
.navbar-brand {
  margin-left: 30px;
  padding-top: 22px;
  height: 100%;
  font-size: 24px;
}
.nav-tabs {
  margin-right: 30px;
  border: none;
  padding-top: 10px;
}
.nav-tabs > li {
  font-size: 18px;
  height: 100%;
}

.nav-tabs > li > a,
.nav-tabs > li > a:focus,
.nav-tabs > li > a:hover {
  background-color: #E5E5E5;
  border: none;
  color: #666;
}
.nav-tabs-home > li > a,
.nav-tabs-home > li > a:focus,
.nav-tabs-home > li > a:hover {
  background-color: white;
  border: none;
  color: #666;
}

.nav-tabs > li.active > a,
.nav-tabs > li.active > a:focus,
.nav-tabs > li.active > a:hover {
  background-color: #E5E5E5;
  font-weight: bold;
  border: none;
  border-bottom: 10px solid black;
}
.nav-tabs-home > li.active > a,
.nav-tabs-home > li.active > a:focus,
.nav-tabs-home > li.active > a:hover {
  background-color: white;
  font-weight: bold;
  border: none;
  border-bottom: 10px solid black;
}

.tab-content {
  margin-top: 65px;
}

.front-panel {
  position: relative;
  overflow: hidden;
  height: 300px;
  max-width: 1500px;
  margin: 0 auto;
}
.front-image {
  position: absolute;
  width: 100%;
  height: 100%;
  background-image: url("/img/banner1.jpg");
  background-position: center 68%;
  background-size: cover;
  opacity: 70%;
  z-index: -1;
  margin: 0 auto;
}
@media screen and (min-width: 1501px) {
  .front-image {
    background-position: center 71%;
  }
}
@media screen and (min-width: 1201px) and (max-width: 1500px) {
  .front-image {
    background-position: center 72%;
  }
}
@media screen and (max-width: 1200px) {
  .front-image {
    background-position: center 78%;
  }
}
.front-title {
  font-family: "Montserrat";
  padding-top: 100px;
}
.home-header {
  text-align: center;
  font-size: 70px;
  font-weight: bold;
  text-shadow: 1px 1px 1px;
  color: black;
}
.home-sub {
  text-align: center;
  font-size: 20px;
  color:black;
}
@media screen and (max-width: 991px) {
  .home-header {
    font-size:50px;
  }
  .home-sub {
    font-size:16px;
  }
}
.header {
  padding-top: 5px;
  padding-bottom: 20px;
  border-bottom: 1px solid #ccc;
}
.news-item {
  padding: 10px 40px 0 40px;
}

.profile-image-prof {
  float:left;
  width: 220px;
  height: 220px;
  overflow: hidden;
  border: 1px solid #eee;
  border-radius: 50px;
  background-color: #fff;
  margin-left: 30px;
}
.profile-image-prof img {
  width: 100%;
  height: auto;
}
.profile-info-prof {
  float:left;
  width: 350px;
  height: 160px;
  margin-left: 25px;
  margin-bottom: 25px;
}


.profile-image-stud {
  float:left;
  width: 200px;
  height: 200px;
  overflow: hidden;
  border: 1px solid #eee;
  border-radius: 45px;
  background-color: #fff;
  margin-left: 30px;
}
.profile-image-stud img {
  width: 100%;
  height: auto;
}
.profile-info-stud {
  float:left;
  width: 350px;
  height: 160px;
  margin-left: 25px;
  margin-bottom: 25px;
}
.name-stud {
  margin-top: 0px;
}
.sub-text-course {
  font-weight: normal;
  color: #aaa;
  font-size: small;
  margin: 10px 0px 0px 0px;
}

.research {
  padding: 20px 50px;
  background-position: 90% 90%;
  background-repeat: no-repeat;
  background-size: auto 60%;
}
.research-title {
  border-left: 5px solid #ebb810;
  padding-left: 20px;
}
.research-content {
  padding-left: 25px;
}
.research-1 {
  background-image: url("../img/research-1.png");
}
.research-2 {
  background-image: url("../img/research-2.png");
}
.research-3 {
  background-image: url("../img/research-3.png");
}
.research-4 {
  background-image: url("../img/research-4.png");
}
ul.a {
  list-style-position: outside;
}

.input-group {
  width: 320px;
}
.input-group-addon {
  color: black;
  background-color: #ebb810;
  height:38px;
  border-radius: 15px 0 0 15px;
  border: 1px solid #ccc;
}
.input-group > input {
  height:40px;
  padding-left: 15px;
  border-radius: 0 15px 15px 0;
  border: 1px solid #ccc;
}

.img-header {
  padding: 60px 10px 60px 50px;
}

